2005-08-03  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/nsd.h:
	* nsd/nsconf.h:
	* nsd/nsconf.c:
	* nsd/log.c: Use efficient table lookups to convert from severity
	strings to severity levels and back again. Localize global log
	configuration into log.c.
	* tests/ns_log.test: Add some simple tests for the ns_log and
	ns_logctl commands.
	* tests/all.tcl: tcltest does not actually get confused by log
	messages...

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/config.c: Add config value wrappers which handle defaults
	and in the case of integer values, range checking. 

2005-08-01  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/driver.c: Log a warning when no drivers are configured to
	listen (BUG #1231853).  Driver errors during startup continue to
	be a non-fatal error.

	* include/ns.h:
	* nsd/log.c: Make Tcl send panic messages to the server log. Add
	some CONST declarations and GCC attributes.
	* nsd/unix.c: Call Tcl Panic directly from fatal signal
	handler. Remove unneeded call to pthread_kill_other_threads_np.

	* include/ns.h:
	* nsd/dsprintf.c:
	* nsd/dstring.c: Untabify, reformat and add CONST declarations.

	* nsd/log.c: Untabify, reformat and touch up comments.

2005-08-01  Vlad Seryakov  <seryakov@users.sf.net>

	* include/ns.h: fixed bug preventing sockcallbacks to
	be used, NS_SOCK_ANY should be 0xff otherwise callback is
	removed from the queue.

	* include/ns.h:
	* nsd/nsd.h:
	* nsd.queue.c:
	* nsd.return.c:
	* nsd/conn.c: added ns_conn responseversion to manually set response 
	protocol and version to have full control about returned HTTP format.
	For C API 2 functiosn are added: Ns_ConnResponseVersion and
	Ns_ConnSetResponseVersion. Added responseVersion char* pointer to 
	Conn structure. To enable response version tests ns_httptest needs
	to be changed to return response protocol/version.

	* nsd/adprequest.c:
	* tests/http_chunked.test:
	* tests/testserver/pages/http_chunked.adp: detects now whether client 